--- a/serverless.yml
+++ b/serverless.yml
@@ -5,6 +5,9 @@ provider:
   name: aws
   runtime: nodejs12.x
   lambdaHashingVersion: '20201221'
+  region: eu-central-1
+  environment:
+    COINS_TABLE: "flw-coins-${opt:stage, 'dev'}"
 
 functions:
   coin:
@@ -13,3 +16,30 @@ functions:
       - httpApi:
           path: /slack
           method: post
+
+resources:
+  Resources:
+    CoinsDynamoDbTable:
+      Type: 'AWS::DynamoDB::Table'
+      DeletionPolicy: Retain
+      Properties:
+        AttributeDefinitions:
+          -
+            AttributeName: "id"
+            AttributeType: "S"   
+          -
+            AttributeName: "timestamp"
+            AttributeType: "N"   
+        KeySchema:
+          -
+            AttributeName: "id"
+            KeyType: "HASH"
+          -
+            AttributeName: "timestamp"
+            KeyType: "RANGE"
+        ProvisionedThroughput:
+          ReadCapacityUnits: 1
+          WriteCapacityUnits: 1
+        StreamSpecification:
+          StreamViewType: "NEW_AND_OLD_IMAGES"
+        TableName: ${self:provider.environment.COINS_TABLE}
