--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "tap",
-    "deploy": "serverless deploy"
+    "deploy": "serverless deploy",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +18,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "husky": "^7.0.4",
     "jest": "^27.2.4",
     "nodemon": "^2.0.13",
     "serverless": "^2.68.0",
@@ -32,5 +34,8 @@
   },
   "engines": {
     "node": "16.x"
+  },
+  "tap": {
+    "check-coverage": false
   }
 }
