--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "husky": "^7.0.4",
     "jest": "^27.2.4",
+    "lint-staged": "^12.1.2",
     "nodemon": "^2.0.13",
     "serverless": "^2.68.0",
     "standard": "^16.0.3",
@@ -37,5 +38,8 @@
   },
   "tap": {
     "check-coverage": false
+  },
+  "lint-staged": {
+    "*.js": "standard --fix"
   }
 }
