--- a/serverless.yml
+++ b/serverless.yml
@@ -8,6 +8,7 @@ provider:
   region: eu-central-1
   environment:
     COINS_TABLE: "flw-coins-${opt:stage, 'dev'}"
+    SLACK_TOKEN: "IC4NXN8MzB2jWOS1GITCSaNR"
 
 functions:
   coin:
