--- a/package.json
+++ b/package.json
@@ -5,19 +5,20 @@
   "main": "index.js",
   "scripts": {
     "test": "tap",
-    "deploy": "serverless deploy",
+    "deploy-dev": "serverless deploy",
+    "deploy": "serverless deploy --stage prod",
     "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.1043.0",
     "bluebird": "^3.7.2",
     "body-parser-for-serverless": "^1.0.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "aws-sdk": "^2.1043.0",
     "git-branch-is": "^4.0.0",
     "husky": "^7.0.4",
     "jest": "^27.2.4",
