--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "dependencies": {
     "bluebird": "^3.7.2",
     "body-parser-for-serverless": "^1.0.1",
-    "uuid": "^8.3.2",
-    "axios": "^0.26.0"
+    "undici": "^4.14.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "aws-sdk": "^2.1043.0",
