--- a/serverless.yml
+++ b/serverless.yml
@@ -24,7 +24,7 @@ provider:
 
 custom:
   s3:
-    table_name: "clara-coins-${opt:stage, 'dev'}-2-2023"
+    table_name: "clara-coins-${opt:stage, 'dev'}-FY23-01"
   parameter_store:
     base_name: "/${self:service}/${opt:stage, 'dev'}"
   env:
