--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,8 @@
 {
-    "extends": "standard"
+  "extends": ["standard", "plugin:security/recommended"],
+  "globals": {
+    "describe": "readonly",
+    "test": "readonly",
+    "expect": "readonly"
+  }
 }
