--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "tap",
+    "test": "tap --allow-incomplete-coverage",
     "deploy-dev": "serverless deploy",
     "deploy": "serverless deploy --stage prod",
     "postinstall": "husky install",
@@ -14,26 +15,24 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.1187.0",
+    "aws-sdk": "^2.1472.0",
     "body-parser-for-serverless": "^1.0.1",
     "undici": "^ 5.8.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "eslint": "^8.48.0",
+    "eslint": "^8.51.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-security": "^1.7.1",
+    "eslint-plugin-unicorn": "^48.0.1",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "serverless": "^3.21.0",
     "serverless-domain-manager": "^6.0.3",
-    "tap": "^16.3.0"
+    "tap": "^18.5.0"
   },
   "engines": {
     "node": "18.x"
-  },
-  "tap": {
-    "check-coverage": false
   },
   "lint-staged": {
     "*.js": "eslint --fix"
