refactor: :recycle: Tune linter rules and allow dynamoDb as a product name

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,14 @@
       {
         "case": "camelCase"
       }
+    ],
+    "unicorn/prevent-abbreviations": [
+      "error",
+      {
+        "allowList": {
+          "dynamoDb": true
+        }
+      }
     ]
   }
 }
